# deepmiro-engine

./: .env.example  .gitignore  .mcp.json  README.md  docker-compose.yml  docker-engine-monolith.Dockerfile  logo-concepts.html  logo-final.html  logo-v2.html  logo-v3.html  logo-v4.html  logo-v5.html  logo-v6.html  logo-v7.html  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  docker-image.yml  release.yml
backend/: pyproject.toml
backend/app/: __init__.py
backend/scripts/: run_parallel_simulation.py
docker/: Dockerfile  Dockerfile.backend  Dockerfile.twhin-sidecar  docker-compose.yml  run_surreal.py
docs/: index.html
docs/legal/: acceptable-use-policy.md  cookie-policy.md  privacy-policy.md  terms-of-service.md
engine/: pyproject.toml  requirements.txt
engine/app/: __init__.py  config.py
engine/scripts/: twhin_rec.py  (+1 more)
frontend/: index.html
helm-chart/: Chart.yaml  values.yaml
locales/: en.json  zh.json
mcp-server/: .env.example  manifest.json  package-lock.json  package.json
neo4j-adapter/: boost_patch.py  zep_shim.py
plugin/: .mcp.json
surrealdb-adapter/: __init__.py  avm.py  config.py  i18n_patch.py  llm_patch.py  patch_mirofish.py  requirements.txt  search_service.py  storage_factory.py  surrealdb_schema.py  surrealdb_storage.py  zep_shim.py
twhin-sidecar/: pyproject.toml
twhin-sidecar/twhin_sidecar/: __init__.py  main.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+110 files in other folders)
