[project]
name = "deepmiro-twhin-sidecar"
version = "0.1.0"
description = "Pod-scoped TWHIN-BERT embedding service for DeepMiro simulations"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [{ name = "Joel Libni" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    # CPU-only torch keeps the image small. The Dockerfile pins this
    # explicitly via the PyTorch CPU index URL.
    "torch>=2.2",
    "transformers>=4.40",
    "tokenizers>=0.20",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twhin_sidecar"]
